Created a development branch

--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,11 @@
 
     // https://github.com/typekit/webfontloader/blob/master/README.md
     WebFontConfig = {
-      google: {
-        families: ['Roboto']
-      }
-      /*
       custom: {
-        families: ['My Font', 'My Other Font:n4,i4,n7'],
-        urls: ['/fonts.css']
+        families: ['Crimson', 'Roboto'],
+        urls: ['assets/fonts/Crimson.css', 'assets/fonts/Roboto.css']
       }
-      */
+
     };
 
     (function(d) {
@@ -29,7 +25,7 @@
     })(document);
 
   </script>
-  
+
 
 </head>
 
