Added assets and set the first page background elements

--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,13 @@
 </head>
 
 <body>
+  <section class="home">
+  <div class="wave-one"><img src="" alt="" /></div>
+  </section>
 
-  <header>
-    <h1>Hello, oyster_code</h1>
-  </header>
+  <section class="babeleir">
+    <img src="assets/img/wave-two.png" alt="" class="wave-two-image" />
+  </section>
 
 </body>
 
