Added backgroundelements and filed the fonts

--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,17 @@
 
 <body>
   <section class="home">
-  <div class="wave-one"><img src="" alt="" /></div>
+    <img src="assets/img/header_boat.png" alt="header boat" class="header-boat-image" />
+    <img src="assets/img/wave-two.png" alt="second wave" class="wave-two-image" />
+    <img src="assets/img/header_buoy.png" alt="header buoy" class="header-buoy-image" />
+    <img src="assets/img/header_whale.png" alt="header whale" class="header-whale-image" />
+    <img src="assets/img/wave-one.png" alt="first wave" class="wave-one-image" />
+    <img src="assets/img/header_bottle.png" alt="header bottle" class="header-bottle" />
+    <img src="assets/img/base_wave.png" alt="base wave" class="base-wave-image" />
   </section>
 
   <section class="babeleir">
-    <img src="assets/img/wave-two.png" alt="" class="wave-two-image" />
+
   </section>
 
 </body>
