Finished a big part of HTML&CSS and finalised all the backgrounds

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     // https://github.com/typekit/webfontloader/blob/master/README.md
     WebFontConfig = {
       custom: {
-        families: ['Crimson', 'Roboto'],
-        urls: ['assets/fonts/Crimson.css', 'assets/fonts/Roboto.css']
+        families: ['Montserrat', 'CrimsonText', 'Pacifico'],
+        urls: ['assets/fonts/Montserrat.css', 'assets/fonts/CrimsonText.css', 'assets/fonts/Pacifico.css']
       }
 
     };
@@ -37,12 +37,84 @@
     <img src="assets/img/header_whale.png" alt="header whale" class="header-whale-image" />
     <img src="assets/img/wave-one.png" alt="first wave" class="wave-one-image" />
     <img src="assets/img/header_bottle.png" alt="header bottle" class="header-bottle" />
+    <h1 class="header_title">Dive into a new year</h1>
     <img src="assets/img/base_wave.png" alt="base wave" class="base-wave-image" />
   </section>
+<main>
+  <section class="container">
+    <section class="intro-section">
+      <header class="header_babeleir">
+        <div class="pre-header-container">
+          <h2>Explore the new</h2>
+        </div>
+        <h3>Babeleir de bretagne</h3>
+      </header>
+      <article class="introduction-article">
+        <p>
+          The beer Brussels project especially remade this beer for you, lover of france and sea.
+          The Babeleir De Bretagne is a combination of delicious beer and fresh oysters.</br></br>
+          If you want a unique experience scroll down and discover our  contest and win an insanly awesome Newyears reception with your crew.
+        </p>
+      </article>
+    </section>
 
-  <section class="babeleir">
+    <section class="history-section">
+      <header class="header_babeleir">
+        <div>
+          <h2>You should know</h2>
+        </div>
+        <h3>A little history</h3>
+      </header>
+      <article class="history-article">
+        <p>
+          The beer Brussels project especially remade this beer for you, lover of france and sea.
+          The Babeleir De Bretagne is a combination of delicious beer and fresh oysters.</br></br>
+          If you want a unique experience scroll down and discover our  contest and win an insanly awesome Newyears reception with your crew.
+        </p>
+      </article>
+    </section>
+
+    <section class="about-container">
+      <div class="about-image-container">
+        <img class="stout-img" src="assets/img/stout_beer.png" alt="stout bier afbeelding" />
+      </div>
+      <section class="about-section">
+        <header class="header_babeleir">
+          <div>
+            <h2>Dark &amp; tasty</h2>
+          </div>
+          <h3>Stout beer</h3>
+        </header>
+        <article class="about-article">
+          <p>
+            The beer Brussels project especially remade this beer for you, lover of france and sea.
+            The Babeleir De Bretagne is a combination of delicious beer and fresh oysters.</br></br>
+            If you want a unique experience scroll down and discover our  contest and win an insanly awesome Newyears reception with your crew.
+          </p>
+        </article>
+      </section>
+    </section>
+
+    <section class="contest-container">
+      <section class="contest-section">
+        <header class="header_babeleir">
+          <div class="pre-header-container">
+            <h2>Celebrate</h2>
+          </div>
+          <h3>NYE WITH YOUR CREW &amp; US</h3>
+        </header>
+        <article class="contest-article">
+          <p>
+            The beer Brussels project especially remade this beer for you, lover of france and sea.
+            The Babeleir De Bretagne is a combination of delicious beer and fresh oysters.</br></br>
+            If you want a unique experience scroll down and discover our  contest and win an insanly awesome Newyears reception with your crew.
+          </p>
+        </article>
+      </section>
+    </section>
 
   </section>
+</main>
 
 </body>
 
