Added Velocity.js and did sea animations

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
 </head>
 
 <body>
+  <!-- <canvas class="animation"> -->
   <section class="home">
     <img src="assets/img/header_boat.png" alt="header boat" class="header-boat-image" />
     <img src="assets/img/wave-two.png" alt="second wave" class="wave-two-image" />
@@ -115,6 +116,7 @@
 
   </section>
 </main>
+</canvas>
 </body>
 
 </html>
