I edited the body text and I added particles.js for the bubble effect

--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,16 @@
       </header>
       <article class="introduction-article">
         <p>
-          The beer Brussels project especially remade this beer for you, lover of france and sea.
-          The Babeleir De Bretagne is a combination of delicious beer and fresh oysters.</br></br>
-          If you want a unique experience scroll down and discover our  contest and win an insanly awesome Newyears reception with your crew.
+        The Brussels Beer Project especially remade this beer for you, lovers of france and sea.
+        The Babeleir De Bretagne is a combination of delicious beer and fresh oysters. </br></br>
+
+        We hope you also love diving, because if you do, you and your crew will be the best candidates for an amazing
+        contest to win an NYE reception! </br></br>
+
+        Can you already taste the bitter sweet in your mouth? I bet.
+        It’s a new recipe and we know you’ll love it, so scroll down and discover more about our new Babeleir edition &amp; our NYE contest.
+
+
         </p>
       </article>
     </section>
@@ -68,9 +75,9 @@
       </header>
       <article class="history-article">
         <p>
-          The beer Brussels project especially remade this beer for you, lover of france and sea.
-          The Babeleir De Bretagne is a combination of delicious beer and fresh oysters.</br></br>
-          If you want a unique experience scroll down and discover our  contest and win an insanly awesome Newyears reception with your crew.
+        Althought the idea of combining beer &amp; oysters did not come from Brittany, we have an oysterfarm in Brittany and it has the best oysters ever!
+        We made sure to combine exactly with the best to provide excellent quality to you.</br></br>
+        Great thing that we have divers all over the world loving this beer, are you one of them? Because if so, gear up to get divin'!
         </p>
       </article>
     </section>
@@ -88,9 +95,10 @@
         </header>
         <article class="about-article">
           <p>
-            The beer Brussels project especially remade this beer for you, lover of france and sea.
-            The Babeleir De Bretagne is a combination of delicious beer and fresh oysters.</br></br>
-            If you want a unique experience scroll down and discover our  contest and win an insanly awesome Newyears reception with your crew.
+            Everyone knows that beer is made of cereal grain right? Well yeah, but did you know our beer also contains chocolate?</br></br>
+            It’s not much but enough to give you an amazing extra taste together with the oysters.
+
+
           </p>
         </article>
       </section>
@@ -116,7 +124,7 @@
 
   </section>
 </main>
-</canvas>
+<div id="particles-js"></div>
 </body>
 
 </html>
